<resources>
    <string name="app_name">Gasolineras</string>
    <string name="gasolina95label">Gasolina</string>
    <string name="dieselAlabel">Diesel</string>
    <string name="refresh">Recargar</string>
    <string name="info">Info</string>
    <string name="loadCorrect">Se han cargado %d gasolineras</string>
    <string name="loadError">Ha habido un error cargando las gasolineras</string>
    <string name="info_text">Aplicación creada para el Proyecto Integrado Curso 2024-2025</string>


    <string-array name="opciones_filtro_combustible">
        <item>Biodiesel</item>
        <item>Bioetanol</item>
        <item>Gas Natural Comprimido</item>
        <item>Gas Natural Licuado</item>
        <item>Gases licuados del petróleo</item>
        <item>Gasoleo A</item>
        <item>Gasoleo B</item>
        <item>Gasoleo Premium</item>
        <item>Gasolina 95 E10</item>
        <item>Gasolina 95 E5</item>
        <item>Gasolina 95 E5 Premium</item>
        <item>Gasolina 98 E10</item>
        <item>Gasolina 98 E5</item>
        <item>Hidrogeno</item>
    </string-array>

    <string name ="elige_combustible">Elige el tipo de Combustible</string>
    <string name ="elige_orden">Elige el orden de precio</string>
    <string name ="orden_descendente">Orden Descendente</string>
    <string name ="orden_ascendente">Orden Ascendente</string>
    <string name ="confirmar">Confirmar</string>

    <string name="historial_pagos">Historial de pagos</string>
    <string name="btn_addPago">+</string>

    <string name="error_tipo_combustible">Debes seleccionar un tipo de combustible</string>
    <string name="titulo_error_tipo_combustible">Error en el tipo de combustible</string>
    <string name="error_nombre_gasolinera">Debes introducir un nombre de gasolinera</string>
    <string name="titulo_error_nombre_gasolinera">Error en el nombre de gasolinera</string>
    <string name="error_precio_por_litro">Debes introducir un precio</string>
    <string name="titulo_error_precio_por_litro">Error en el precio por litro</string>
    <string name="error_cantidad_combustible">Debes introducir una cantidad de combustible</string>
    <string name="titulo_error_cantidad_combustible">Error en la cantidad</string>

    <string name="succes_reg_pay">El pago se ha registrado de manera correcta en el historial de pagos</string>
    <string name="title_succes_reg_pay">Registro correcto</string>

    <string name="succes_reg_discount">El descuento se ha creado de manera correcta.</string>
    <string name="title_succes_reg_discount">Registro correcto</string>
    <string name="delete_pay_btn">Boton dedicado a eliminar un pago</string>
    <string name="error_fecha">Debes introducir una fecha</string>
    <string name="titulo_error_fecha">Error en la fecha</string>



    <string-array name="opcionesSpinner">
        <item>Biodiesel</item>
        <item>Bioetanol</item>
        <item>Gas Natural Comprimido</item>
        <item>Gas Natural Licuado</item>
        <item>Gases licuados del petróleo</item>
        <item>Gasoleo A</item>
        <item>Gasoleo B</item>
        <item>Gasoleo Premium</item>
        <item>Gasolina 95 E10</item>
        <item>Gasolina 95 E5</item>
        <item>Gasolina 95 E5 Premium</item>
        <item>Gasolina 98 E10</item>
        <item>Gasolina 98 E5</item>
        <item>Hidrogeno</item>
    </string-array>

    <string-array name="opcionesSpinnerMes">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>



    <string-array name="opcionesSpinnerAnho">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>

    <string-array name="opcionesSpinnerGrafico">
        <item>Selecciona un gráfico</item>
        <item>Gasto diario</item>
        <item>Precio combustible diario</item>
        <item>Porcentaje tipo combustible</item>
    </string-array>



</resources>